oop_mro/tests/trybuild/fail_cycle.stderr
error: inheritance cycle involving class `A`
 --> tests/trybuild/fail_cycle.rs:4:11
  |
4 |     class A: B {}
  |           ^
