oop_mro/tests/trybuild/fail_cycle.rs
use oop_mro::prelude::*;

oop_class! {
    class A: B {}
    class B: A {}
}

fn main() {}
